styles/modules/modals/_purchase.scss
.purchase {

  .popInMessageHolder {
    top: 75px;
  }

  #confirmPay {
    padding: 0;
    top: calc(100% + #{$padSm});
  }

  .showIfPay,
  .showIfPending,
  .showIfComplete {
    display: none;
  }

  .pending {
    .QR {
      display: block;

      img {
        width: 240px;
        height: 240px;
      }
    }

    .copyNotification {
      top: -0.6em
    }

    .clickable {
      cursor: pointer;
    }
  }

  .complete {
    .message {
      border-style: solid;
      border-width: 1px;
      padding: $pad;
      margin-bottom: $pad;

      textarea {
        border: none;
      }
    }

    .socialBtns .btn {
      height: auto;
      padding-top: 8px;
      padding-bottom: 8px;
    }
  }

  .actionBtn {
    .pendingBtn {
      pointer-events: none;
    }
  }

  .sidebar {
    position: fixed;
    width: 234px;

    .closeBtn {
      position: absolute;
      right: -1px;
      top: -42px;
    }

    .receipt {
      .subShipping {
        padding-left: $pad;
      }
    }
  }

  .loadingPurchase {
    display: flex;
    align-items: center;
    justify-content: center;
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
  }

  .moderatorsList .moderatorsWrapper.fauxModeratorsWrapper {
    min-height: 0;
  }
}

